# rhotic

./: .gitignore  .ocamlformat  Makefile  README.md  dev.opam  dev.opam.locked  dune-project  opam  opam.locked  rhotic.opam.locked
.github/workflows/: workflow.yml
doc/: Makefile  mini_rhotic.ott  mini_rhotic_.tex  mini_rhotic_debug.tex  notes.tex  notes2.tex  ottlayout.sty
examples/: count_evens.rv  extend.rv  functions1.rv  functions2.rv  functions3.rv  functions4.rv  functions5.rv  functions6.rv  intervals1.rv  intervals2.rv  intervals3.rv  recycle1.rv  recycle2.rv  sum.rv  types1.rv  types2.rv  types3.rv  types4.rv  types5.rv  types6.rv  types7.rv  weird_sum1.rv  weird_sum2.rv  weird_sum3.rv  weird_sum4.rv
examples/airlineOTP/: README  example01.R  example02.R  example03.R  example04.R
examples/airlineOTP/data/: 101.csv
examples/contest/: Example-2017QA.rv  Example-2017QB.rv
lib/: analysis.ml  common.ml  compile.ml  deparse.ml  deparser.ml  dune  eval.ml  eval2.ml  evalState.ml  expr.ml  exprFold.ml  monitor.ml  opcode.ml  parse.ml  parser.ml  util.ml  varSet.ml
lib/analysis/: analysis.ml  dynamic.ml  intervalAnalysisImpl.ml  static.ml  typeAnalysis.ml  typeAnalysisImpl.ml  typeAnalysisImpl2.ml
lib/monitor/: functionObservedNA.ml  functionTypesElementwiseMerge.ml  functionTypesElementwiseSet.ml  functionTypesTuplewise.ml  inferSpec.ml  monitor.ml
src/: main.ml
test/: dune  eval_suite.ml
