opam-version: "2.0"
synopsis: "Formalization of a subset of R"
authors: "Ming-Ho Yee <mh@mhyee.com>"
maintainer: "Ming-Ho Yee <mh@mhyee.com>"
homepage: "https://github.com/reactorlabs/rhotic"
bug-reports: "https://github.com/reactorlabs/rhotic/issues"
depends: [
 "alcotest"
 "bisect_ppx"
 "ocamlformat"
]
